# agtalk

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  REVIEW.md  SKILL.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
agtalk/: __init__.py  cli.py  console.py  db.py  delivery.py  factory.py  main.py  messenger.py  registry.py
agtalk/migrations/: __init__.py  migrate.py
agtalk/migrations/versions/: 002_add_task_progress.py  003_add_kanban.py  004_add_card_type.py  005_add_agent_workdir.py  006_add_agent_mux.py  __init__.py
agtalk/term/: __init__.py  _escape.py  base.py  tmux.py  zellij.py
docs/: DESIGN.md  agent-http-client.md  agtalk-manual.md  commands.md
examples/: http_agent_poll.py
extension/: .gitignore  agtalk-client.js  background.js  config.js  content.js  manifest.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts
extension/entrypoints/app/: App.tsx  index.html  main.tsx
extension/entrypoints/popup/: App.tsx  index.html
extension/inbox/: inbox.css  inbox.html  inbox.js
extension/lib/: storage.mjs
extension/popup/: popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
extension/src/app/: store.ts
extension/src/app/components/: ConversationList.tsx  ErrorBanner.tsx  MessageList.tsx  ReplyBox.tsx  Sidebar.tsx
extension/src/app/pages/: ConversationsPage.tsx  LogsPage.tsx  SettingsPage.tsx  StatusPage.tsx
extension/src/popup/: store.ts
extension/src/popup/components/: ErrorBox.tsx  Header.tsx  PeerRow.tsx  StatusBar.tsx  Toggle.tsx
extension/src/popup/pages/: AgentConfigPage.tsx  AgentsPage.tsx  DebugPage.tsx  HomePage.tsx  LocalServicePage.tsx  PlatformConfigPage.tsx
extension/src/shared/api/: client.ts  endpoints.ts  types.ts
extension/src/shared/messaging/: handlers.ts  message-types.ts  send-message.ts
extension/src/shared/platform/: detect-platform.ts  inject-text.ts  selectors.ts
extension/src/shared/storage/: keys.ts  storage.ts
extension/src/shared/utils/: errors.ts  timeout.ts
scripts/: agtalk
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  identity.rs  ipc.rs  join_plugin.rs  lib.rs  main.rs  notify.rs  paths.rs  server.rs  session.rs  storage.rs  tests.rs  transport.rs  workspace.rs
src-tauri/src/cli/: client.rs  daemon.rs  dispatch.rs  help.rs  mod.rs  run.rs
src/lib/: ipc.ts  types.ts
src/styles/: main.css
src/views/: ApprovalView.vue  ConversationView.vue  InboxView.vue  SettingsView.vue
