[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ── 项目元数据 ────────────────────────────────────────────────
[project]
name            = "agtalk"
version         = "0.2.0"
description     = "Multi-Agent 通信框架"
readme          = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer[all]>=0.12",    # [all] 自带 rich + shellingham（shell 补全）
    "rich>=13.7",          # 终端渲染
]

# ── CLI 入口 ──────────────────────────────────────────────────
[project.scripts]
agtalk = "agtalk.main:app"

# ── 开发依赖 ──────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# ── Hatch 构建配置 ────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["agtalk"]

# ── Ruff（代码检查 + 格式化，替代 flake8 + black）────────────
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # pycodestyle + pyflakes + isort + pyupgrade + bugbear
ignore = ["B008"]                      # typer 的 typer.Option default 会触发 B008，忽略

[tool.ruff.lint.isort]
known-first-party = ["agtalk"]
