[package]
name = "agtalk"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agtalk"
path = "src/main.rs"

[lib]
name = "agtalk_app"
path = "src/lib.rs"

[features]
# 直接 cargo build（不经 tauri CLI）必须启用：否则 tauri build.rs 判定 dev=true，
# 二进制连 devUrl(localhost) 而非内嵌 dist，导致 GUI 白屏。daemon spawn 的弹窗同理。
# `pnpm tauri dev` 不启用此特性，仍走 dev server 热重载。
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "signal"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
which = "6"
clap = { version = "4", features = ["derive"] }
anstream = "0.6"
anstyle = "1"
comfy-table = "7"
unicode-width = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"

[dev-dependencies]
tempfile = "3"
